--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="#/">mytodo</a>
+                <a class="navbar-brand" href="#/">mytodos</a>
             </div>
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
